feat: remove GET /geographicTaxonomy
