# connector-api/src/main/java/it/pagopa/selfcare/dashboard/connector/api/MsCoreConnector.java
@@ -30,6 +30,4 @@ public interface MsCoreConnector {
 
     void updateInstitutionGeographicTaxonomy(String institutionId, GeographicTaxonomyList geographicTaxonomies);
 
-    List<GeographicTaxonomy> getGeographicTaxonomyList(String institutionId);
-
 }
